try lexical diphthongs

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         a minority measured with <a href="https://pypi.org/project/praat-parselmouth/">Praat</a>. <br>
         <a href="https://en.wikipedia.org/wiki/IPA_vowel_chart_with_audio">Recordings</a> are by
         User:Denelson83 and User:RoachPeter et al. <br>
-        Many thanks to the work of <a href="https://github.com/tmhglnd/vowel-formants-graph">Timo Hoogland.
+        Many thanks to
+        Eric Armstrong's <a href="https://ecampusontario.pressbooks.pub/lexicalsets/">"Lexical Sets for Actors"</a>,
+        and Timo Hoogland's <a href="https://github.com/tmhglnd/vowel-formants-graph">formant synthesis code</a>.
       </small>
     </div>
     <script src="https://d3js.org/d3.v6.js"></script>
