--- a/index.html
+++ b/index.html
@@ -44,7 +44,29 @@
       
       <!-- <div class="card">-->
         <div class="sidebar-left"></div>
-        <div id="vowelchart"></div>
+        <div id="vowelchart">
+          <svg width="690" height="600">
+            <defs>
+              <!-- A marker to be used as an arrowhead -->
+              <marker id="diph-arrowhead" viewBox="0 0 10 10" refX="15" refY="5" markerWidth="6" 
+                markerHeight="6" orient="auto-start-reverse"
+                class="diph-arrowhead" opacity="0">
+                <path d="M 0 0 L 10 5 L 0 10 z" />
+              </marker>
+              <marker id="diph-rho-arrowhead" viewBox="0 0 10 10" refX="15" refY="5" markerWidth="6" 
+              markerHeight="6" orient="auto-start-reverse"
+                class="diph-arrowhead lex-rhotic" opacity="0">
+                <path d="M 0 0 L 10 5 L 0 10 z" />
+              </marker>
+            </defs>
+            <g transform="translate(60, 10)">
+              <g id="axes">
+                <text y="2" x="0" text-anchor="middle" style="user-select: none;">F2</text>
+                <text y="560" x="600" text-anchor="middle" style="user-select: none;">F1</text>
+              </g>
+            </g>
+          </svg>
+        </div>
 
         <div class="sidebar-right">
           <input type="checkbox" id="play-reference" checked onchange="
