--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
               <!-- A marker to be used as an arrowhead -->
               <marker id="diph-arrowhead" viewBox="0 0 10 10" refX="15" refY="5" markerWidth="6" 
                 markerHeight="6" orient="auto-start-reverse"
-                class="diph-arrowhead" opacity="0">
+                class="diph-arrowhead" opacity="0.5">
                 <path d="M 0 0 L 10 5 L 0 10 z" />
               </marker>
               <marker id="diph-rho-arrowhead" viewBox="0 0 10 10" refX="15" refY="5" markerWidth="6" 
               markerHeight="6" orient="auto-start-reverse"
-                class="diph-arrowhead lex-rhotic" opacity="0">
+                class="diph-arrowhead lex-rhotic" opacity="0.5">
                 <path d="M 0 0 L 10 5 L 0 10 z" />
               </marker>
             </defs>
@@ -72,7 +72,7 @@
           <input type="checkbox" id="play-reference" checked onchange="
                                     toggleReferenceRecordings();">
           Reference recordings<br>
-          <input type="checkbox" id="toggle-diphs" onchange="
+          <input type="checkbox" id="toggle-diphs" checked onchange="
                                     toggleDiphthongs();">
           Diphthongs<br>
           <div class="home-only">
@@ -95,7 +95,7 @@
                                                       toggleRP();">
             RP<br>
             <h3 style="margin-bottom: 0;">Lexical Set Key</h3>
-            <span class="legend-sq" style="background-color: darkorchid;"></span>
+            <span class="legend-sq lex-rhotic"></span>
             <span>Rhotic</span>
             
           </div>
