playback for RP centering diphthongs

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       
         <!-- <hr> -->
         Contribute on <a href="https://github.com/conjuncts/vowelchart">GitHub</a>!
+        Made by <a href="https://conjuncts.github.io/">conjuncts</a>. <br>
         <b>F1 and F2 values are approximate.</b> <br>
         Values from <a href="https://en.wikipedia.org/wiki/Formant#Phonetics">Catford 1988</a>, with
         a minority measured with <a href="https://pypi.org/project/praat-parselmouth/">Praat</a>. <br>
