large refactor to make lexsets reactive based on data, in accordance to d3 principles

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 <text y="2" x="0" text-anchor="middle" style="user-select: none;">F2</text>
                 <text y="560" x="600" text-anchor="middle" style="user-select: none;">F1</text>
               </g>
+              <rect id="vowel-playback" x="0" y="0" width="560" height="560" style="fill: transparent; z-index: 1;"></rect>
+              <path id="frontier"></path>
+              <g id="svg-lex"></g>
+              <g id="svg-vowels"></g>
             </g>
           </svg>
         </div>
