a lot of silliness

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <br><span>&#x25CC;&#x031C; Less rounded</span>
             
           </div>
-          <div class="lex-only hidden">
+          <div class="lex-only lex-hidden">
             <input type="checkbox" id="toggle-rp" onchange="toggle('RP');">
             RP<br>
             <h3 style="margin-bottom: 0;">Lexical Set Key</h3>
