--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
               <!-- A marker to be used as an arrowhead -->
               <marker id="diph-arrowhead" viewBox="0 0 10 10" refX="15" refY="5" markerWidth="6" 
                 markerHeight="6" orient="auto-start-reverse"
-                class="diph-arrowhead" opacity="0.5">
+                class="diph-tog-arrowhead" opacity="0.5">
                 <path d="M 0 0 L 10 5 L 0 10 z" />
               </marker>
               <marker id="diph-rho-arrowhead" viewBox="0 0 10 10" refX="15" refY="5" markerWidth="6" 
               markerHeight="6" orient="auto-start-reverse"
-                class="diph-arrowhead lex-rhotic" opacity="0.5">
+                class="diph-tog-arrowhead lex-rhotic" opacity="0.5">
                 <path d="M 0 0 L 10 5 L 0 10 z" />
               </marker>
             </defs>
