--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
             
           </div>
           <div class="lex-only lex-hidden">
-            <input type="checkbox" id="toggle-rp" onchange="toggle('RP');">
+            <span class="tab2-only">
+            <input type="checkbox" id="toggle-rp"  onchange="toggle('RP');">
             RP<br>
+            </span>
             <h3 style="margin-bottom: 0;">Lexical Set Key</h3>
             <span class="legend-sq lex-rhotic"></span>
             <span>Rhotic</span>
